# social-media-project

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml
core/: Dockerfile  pyproject.toml  supervisord.conf
core/api/: admin.py  aws.py  models.py  producer.py  s3_service.py  serializers.py  tasks.py  urls.py  views.py
core/api/migrations/: 0001_initial.py  0002_move_likes_to_post.py  0003_add_is_permanent_block_to_page.py  0004_add_posts_ordering.py
core/api/serializers/: page_serializer.py  post_serializer.py  tag_serializer.py
core/api/services/: page_service.py  post_service.py  tag_service.py
core/api/views/: __init__.py  page_view.py  post_view.py  tag_view.py
core/core/: .env  celery.py  producer.py  settings.py  urls.py
core/scripts/: celery-entrypoint.sh
core/users/: admin.py  models.py  permissions.py  serializers.py  urls.py  user_service.py  views.py
core/users/middleware/: jwt_auth_middleware.py
core/users/migrations/: 0001_initial.py  0002_set_default_role_user.py
localstack/cache/: machine.json
localstack/data/: startup_info.json
localstack/data/dynamodb/: _eu-west-1.db
localstack/data/ses/: lrxhiwqumdjmsoai-lwomorbo-lcad-thxr-tbnr-ohaksmawmvet-mlpyyf.json  waierdyiayahihyf-tobgschj-iaiw-xilh-xuku-wrpstiwwvvpx-kzcepl.json
poetry-project/: pyproject.toml
scripts/: entrypoint.sh
statistic_microservice/: Dockerfile  main.py  pyproject.toml  requirements.txt  services.py  settings.py
statistic_microservice/schemas/: pages.py
statistic_microservice/scripts/: entrypoint.sh
