[tool.poetry]
name = "poetry-project"
version = "0.1.0"
description = ""
authors = ["iMaksus <max1112vas@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_project"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.1"
djangorestframework = "^3.13.1"
psycopg2-binary = "^2.9.3"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
